--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,8 @@
         <p>
             <label for="country">
                 <span>Country: </span>
-                <select id="country" name="country" class="form-control">
+                <select id="country" name="country" required class="form-control">
+                    <option value="" selected></option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Åland Islands">Åland Islands</option>
                     <option value="Albania">Albania</option>
@@ -253,7 +254,7 @@
                     <option value="Ukraine">Ukraine</option>
                     <option value="United Arab Emirates">United Arab Emirates</option>
                     <option value="United Kingdom">United Kingdom</option>
-                    <option value="United States" selected>United States</option>
+                    <option value="United States">United States</option>
                     <option value="United States Minor Outlying Islands">United States Minor Outlying Islands</option>
                     <option value="Uruguay">Uruguay</option>
                     <option value="Uzbekistan">Uzbekistan</option>
@@ -276,7 +277,7 @@
                 <span>Postal Code:</span>
                 <input type="text" id="postal" name="postal" autocomplete="shipping postal-code"
                     pattern="[a-zA-Z0-9- ]*" inputmode="numeric">
-                <span></span>
+                <span class="error" aria-live="polite"></span>
             </label>
         </p>
         <p>
@@ -290,7 +291,7 @@
             <label for="passConfirm">
                 <span>Confirm password:</span>
                 <input id="passConfirm" name="passConfirm" minlength="8" type="password">
-                <span></span>
+                <span class="error" aria-live="polite"></span>
             </label>
         </p>
 
